fixed the odd vertical jump when doing a slide transition.

--- a/walta-app/src/walta/resources/walta.css
+++ b/walta-app/src/walta/resources/walta.css
@@ -14,16 +14,19 @@
 }
 
 /* Set default styles */
-html,body {
-	min-width: 320px;
-	height: 100%;
+html {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
 	font-family: Tahoma, sans-serif !important;
     font-size: 4mm !important;   
-    background-color: white !important;
     margin: 0 !important;
     padding: 0 !important;
     color: black;
 }
+body { width: 100%; height: 100%; background-color: white !important; }
 .mblView { color: black; }
 
 /* Anchor bar */
@@ -130,8 +133,7 @@ html,body {
 
 .waltaHomeView { 
 	text-align: center;
-	margin-top: 0.05mm;
-	margin-left: auto;;
+	margin-left: auto;
 }
 
 .waltaHomeView h1 {
@@ -171,7 +173,6 @@ html,body {
 	-webkit-border-radius: 3mm 3mm; 
 	background-color:  rgba(47,97,204,0.3); 
 	margin-bottom: 1%;
-	margin-top: 1%;
 	margin-left: 2px;
 	margin-right: 2px;
 	padding-top: 2px;
